fix link so github icon is clickable on mobile layout

--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -47,6 +47,11 @@
     }
   }
   &__link {
+    position: absolute;
+    z-index: 2;
+    @include tablet {
+      position: static;
+    }
     &-logo{
       color: #ccd6f6;
       width: 1.5rem; 
